Mejoramiento en la seccion -Siguenos- linea 2033

--- a/index.html
+++ b/index.html
@@ -988,19 +988,19 @@
               <div class="col-12 col-lg-2">
                   <div class="list-wrapper">
                       <h3 class="mbr-list-title mbr-fonts-style display-7">
-                          <strong class="text-black">Siguenos</strong>
+                          <strong class="text-white">Siguenos</strong>
                       </h3>
                       <ul class="list mbr-fonts-style display-4">
-                        <a href="" class="m-5 text-black"><li class="item-wrap">Facebook</li></a>
-                        <a href="" class="m-5 text-black"><li class="item-wrap">Instagram</li></a> 
-                        <a href="" class="m-5 text-black"><li class="item-wrap">WhatsApp</li></a>
+                        <a href="" class="m-5 text-white"><li class="item-wrap">Facebook</li></a>
+                        <a href="" class="m-5 text-white"><li class="item-wrap">Instagram</li></a> 
+                        <a href="" class="m-5 text-white"><li class="item-wrap">WhatsApp</li></a>
                       </ul>
                   </div>
               </div>
               <div class="col-12">
                   <div class="content-wrapper">
                       
-                      <p class="mbr-copy mbr-fonts-style display-4 text-black">© 2024 Português Online. Todos os direitos reservados.</p>
+                      <p class="mbr-copy mbr-fonts-style display-4 text-white">© 2024 Português Online. Todos os direitos reservados.</p>
                   </div>
               </div>
           </div>
