--- a/index.html
+++ b/index.html
@@ -1012,4 +1012,7 @@
     <script src="./docs/javaScript/videoMusica.js"></script>
     <script src="./docs/javaScript/formulario.js"></script>
     <script src="./docs/javaScript/barraDeNavegacion.js"></script>
+        <!-- Scripts -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"></script>
   </body></html>
