Inmplementacion de boton en whatsapp

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>    
 
     <section data-bs-version="5.1" class="tamanio features07 immersem5 cid-ux3Lun9GfK" id="news-1-ux3Lun9GfK">
         <div class="container-fluid">
@@ -934,48 +934,6 @@
           </div>
       </div>
   </section>
-  
-  
-  <section data-bs-version="5.1" class="tamanio form01 immersem5 cid-ux3Lund8Wv" id="contact-form-1-ux3Lund8Wv">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <div class="content-wrapper">
-                    <div class="mbr-form" data-form-type="formoid">
-                        <form action="./netlify/functions/submit-form.js.txt" method="POST" class="mbr-form form-with-styler" data-form-title="Formulario de Contacto">
-                            <input type="hidden" name="email" data-form-email="true" value="vEfLnEhIsUdA49naPNGAhCps/6VZUoxZd6dI7rqvWgxLet47xHLHhzrVDj5kQGiROHIjJt9BkKzaH8iPebyEjCcEcPkXURCBNTIjuTMaN1762YEl+PlFoPcdm8M1R5Po">
-                            <div class="row">
-                                <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">¡Gracias por contactarnos! Nos pondremos en contacto contigo pronto.</div>
-                                <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! Algo salió mal. Por favor, inténtalo de nuevo.</div>
-                            </div>
-                            <div class="dragArea row">
-                                <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <h2 class="mbr-section-title mbr-fonts-style display-2"><strong>Contáctanos</strong></h2>
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <p class="mbr-text mbr-fonts-style display-4"><br>Estamos aquí para responder todas tus preguntas. ¡Conversemos!</p>
-                                </div>
-                                <div data-for="name" class="col-lg-12 col-md-12 col-sm-12 form-group mb-3">
-                                    <label for="name-contact-form-1-ux3Lund8Wv" class="form-control-label mbr-fonts-style display-4">Tu Nombre</label>
-                                    <input type="text" name="name" placeholder="Escribe tu nombre" data-form-field="name" class="form-control display-4" value="" id="name-contact-form-1-ux3Lund8Wv" required>
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="text">
-                                    <label for="text-contact-form-1-ux3Lund8Wv" class="form-control-label mbr-fonts-style display-4">Tu Edad</label>
-                                    <input type="number" name="text" placeholder="Escribe tu edad" data-form-field="text" class="form-control display-7" value="" id="text-contact-form-1-ux3Lund8Wv" required>
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="email">
-                                    <label for="email-contact-form-1-ux3Lund8Wv" class="form-control-label mbr-fonts-style display-4">Correo Electrónico</label>
-                                    <input type="email" name="email" placeholder="Escribe tu email" data-form-field="email" class="form-control display-7" value="" id="email-contact-form-1-ux3Lund8Wv" required>
-                                </div>
-                                <div class="col mbr-section-btn"><button type="submit" class="btn btn-formulario display-4">Enviar</button></div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
   
   <section data-bs-version="5.1" class="footer01 immersem5 cid-ux3LuneBZT" once="footers" id="footer-1-ux3LuneBZT">
@@ -1002,6 +960,11 @@
           </div>
       </div>
   </section>
+
+  <a href="https://wa.me/59175936991" target="_blank" class="whatsapp-container">
+    <img src="https://i.pinimg.com/736x/e9/b0/4b/e9b04b4f65f624f24c2116cdc306227c.jpg" alt="icono de WhatsApp" class="boton-whatsapp"> 
+    <span class="whatsapp-tooltip">¿Quieres más información sobre nuestras clases?</span>
+  </a>
   
   
     <script src="./docs/javaScript/apariencia.js"></script>
