Falta union del formulario de registro (php+html+css) a la pagina web

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav nav-dropdown ms-auto" data-app-modern-menu="true">
                         <div class="navbar-buttons mbr-section-btn">
-                            <a class="btn btn-white display-4" href="./docs/Formulario.html">Inscríbete Ahora Mismo</a>
+                            <a class="btn btn-white display-4" href="FORMULARIO REGISTRO ESTUDIANTES/formulario.html">Inscríbete Ahora Mismo</a>
                         </div>
                         <li class="nav-item"><a class="nav-link link text-black display-4" href="#call-to-action-1-ux3Lunchgo">Sobre Nuestra Profesora</a></li>
                         <li class="nav-item"><a class="nav-link link text-black display-4" href="#team-1-ux3LunbSkJ">Nuestros Alumnos</a></li>
