--- a/FORMULARIO REGISTRO ESTUDIANTES/formulario.html
+++ b/FORMULARIO REGISTRO ESTUDIANTES/formulario.html
@@ -7,36 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <!-- Custom CSS -->
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-      }
-      .card-registration {
-        border-radius: 15px;
-        overflow: hidden;
-      }
-      .card-body {
-        padding: 2rem;
-      }
-      .btn-formulario {
-        background-color: #007bff;
-        border-color: #007bff;
-        color: white;
-        width: 100%;
-      }
-      .img-fluid {
-        border-top-left-radius: .25rem;
-        border-bottom-left-radius: .25rem;
-      }
-      .section-btn {
-        text-align: center;
-      }
-      .form-outline label {
-        font-weight: bold;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="formularioEstilo.css">
   </head>
   <body>
     <section class="h-100 bg-dark">
@@ -50,7 +21,8 @@
                     alt="Sample photo" class="img-fluid" />
                 </div>
                 <div class="col-xl-6">
-                  <form action="./php/registroEstudiantes.php" method="POST" class="form-with-styler" data-form-title="Formulario de Registro">
+
+                  <form method="POST" class="form-with-styler" data-form-title="Formulario de Registro">
                     <div class="row">
                       <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">
                         ¡Gracias por contactarnos! Nos pondremos en contacto contigo pronto.
@@ -66,26 +38,26 @@
                         <div class="col-md-12 mb-4">
                           <div class="form-outline">
                             <label class="form-label" for="nombres">Nombres</label>
-                            <input type="text" id="nombres" name="nombres" class="form-control form-control-lg" required />
+                            <input type="text" id="nombres" name="nombres" class="form-control form-control-lg" placeholder="Ingrese su nombre" required />
                           </div>
                         </div>
                         <div class="col-md-12 mb-4">
                           <div class="form-outline">
                             <label class="form-label" for="apellidos">Apellidos</label>
-                            <input type="text" id="apellidos" name="apellidos" class="form-control form-control-lg" />
+                            <input type="text" id="apellidos" name="apellidos" class="form-control form-control-lg" placeholder="Ingrese sus apellidos"/>
                           </div>
                         </div>
-                        <div class="col-md-3 mb-4">
+                        <div class="col-md-12 mb-4">
                           <div class="form-outline">
-                            <label class="form-label" for="edad">Edad</label>
-                            <input type="number" id="edad" name="edad" class="form-control form-control-lg" required />
+                            <label class="form-label" for="edad">Fecha de Nacimiento</label>
+                            <input type="date" id="fechaNacimiento" name="fechaNacimiento" class="form-control form-control-lg" required/>
                           </div>
                         </div>
                       </div>
 
                       <div class="form-outline mb-4">
                         <label class="form-label" for="email">Correo Electrónico</label>
-                        <input type="email" id="email" name="email" class="form-control form-control-lg" required />
+                        <input type="email" id="email" name="email" class="form-control form-control-lg" required placeholder="Ingrese su correo Electrónico"/>
                       </div>
 
                       <div class="row mb-4">
@@ -112,9 +84,7 @@
                         </div>
                       </div>
 
-                      <div class="section-btn">
-                        <button type="submit" class="btn btn-formulario display-4">Enviar</button>
-                      </div>
+                      <input type="submit" class="btn btn-formulario display-4" name="register" value="Enviar">
                     </form>
 
                     <p class="mt-5 text-center">Si quieres contactarnos o saber más sobre las clases, puedes escribirnos y con gusto te responderemos a cualquier duda.</p>
