--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
         </div>
     </div>
 </section>
+button
   
   
 <section data-bs-version="5.1" class="tamanio slider05 mbr-embla cid-ux3Lun17Tc" id="slider-2-ux3Lun17Tc">
@@ -961,10 +962,10 @@
       </div>
   </section>
 
-  <a href="https://wa.me/59175936991" target="_blank" class="whatsapp-container">
+  <!-- <a href="https://wa.me/59175936991" target="_blank" class="whatsapp-container">
     <img src="https://i.pinimg.com/736x/e9/b0/4b/e9b04b4f65f624f24c2116cdc306227c.jpg" alt="icono de WhatsApp" class="boton-whatsapp"> 
     <span class="whatsapp-tooltip">¿Quieres más información sobre nuestras clases?</span>
-  </a>
+  </a> -->
   
   
     <script src="./docs/javaScript/apariencia.js"></script>
@@ -978,4 +979,19 @@
         <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"></script>
-  </body></html>
+
+        <script type="text/javascript">
+            (function(d, t) {
+                var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+                v.onload = function() {
+                  window.voiceflow.chat.load({
+                    verify: { projectID: '6777226f71ddcfff0866dc45' },
+                    url: 'https://general-runtime.voiceflow.com',
+                    versionID: 'production'
+                  });
+                }
+                v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+            })(document, 'script');
+          </script>
+  </body>
+  </html>
