Modificación de segunda seccion

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section data-bs-version="5.1" class="header01 immersem5 cid-ux3LumNri2" id="hero-2-ux3LumNri2">
         <div class="container-fluid" style="position: relative;"> <!-- Agregamos posición relativa al contenedor -->
             <div class="row">
-                <div class="col-6">
+                <div class="col-6  d-none d-md-block">
                     <div class="content-wrapper">
                         <div class="title-wrapper">
                             <p class="mbr-desc mbr-fonts-style display-4">¡Es tu momento!</p>
@@ -96,6 +96,79 @@
                                 <source src="./imagenes/icons/3.mp4" type="video/mp4">
                                 Tu navegador no soporta la reproducción de video. Por favor, actualiza tu navegador.
                             </video>
+                        </div>
+                        <div class="img_header02">
+                            <img src="./imagenes/icons/fondo.png" alt="fondo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid"> <!-- Agregamos posición relativa al contenedor -->
+                <div class="row">
+                    <div class="col-12 d-md-none d-block mt-5 pt-5">
+                        <div class="content-wrapper">
+                            <div class="title-wrapper">
+                                <p class="mbr-desc mbr-fonts-style display-4">¡Es tu momento!</p>
+                                <h2 class="mbr-section-title mbr-fonts-style display-3">
+                                    Domina Portugués, transforma tu vida
+                                </h2>
+                            </div>
+                            <div class="content-wrap">
+                                <p class="mbr-name mbr-fonts-style display-4">
+                                    Aprende con una profesora nativa, desde la comodidad de tu hogar.
+                                    ¡Conviértete en un experto en portugués y abre nuevas oportunidades en tu vida!
+                                </p>
+                                <div class="mbr-section-btn">
+                                    <a class="btn btn-white display-4" href="./docs/Formulario.html">Empieza Hoy</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    
+
+    <section data-bs-version="5.1" class="tamanio header01 immersem5 cid-ux3LumQxSR" id="hero-1-ux3LumQxSR">
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <!-- Columna de la imagen -->
+                <div class="col-md-3 text-center">
+                    <div class="content-wrapper">
+                        <div class="img_header03 ms-5">
+                            <img src="./imagenes/icons/personas/1.jpg" alt="fondo" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <!-- Columna del texto -->
+                <div class="col-md-9 d-flex flex-column "> 
+                    <div class="content-wrapper">
+                        <div class="title-wrapper_02 pb-5">
+                            <h2 class="mbr-section-title mbr-fonts-style display-5 align-items-center justify-content-center text-center">
+                                <strong>Redefinimos el aprendizaje de idiomas con un enfoque diferente</strong>
+                            </h2>
+                        </div>
+                        <div class="content-wrap ps-5 pr-5">
+                            <p class="mbr-name mbr-fonts-style display-4">
+                                Olvídate de los métodos aburridos y complicados. Aquí vas a aprender portugués brasileño de
+                                una forma práctica, divertida y, sobre todo, útil para la vida real.
+                            </p>
+                            <p class="mbr-name mbr-fonts-style display-4">
+                                Desde la primera clase estarás hablando, entendiendo expresiones culturales y ganando
+                                confianza para comunicarte en cualquier situación. No se trata solo de memorizar reglas, se trata
+                                de conectar con personas y oportunidades.
+                            </p>
+                            <p class="mbr-name mbr-fonts-style display-4">
+                                Con nuestros cursos en vivo, cada sesión es una experiencia única:
+                            </p>
+                            <ul class="list-unstyled">
+                                <li><strong>🎯 Lecciones dinámicas y personalizadas</strong></li>
+                                <li><strong>🎙️ Conversación desde el primer día</strong></li>
+                                <li><strong>🌎 Inmersión en la cultura brasileña</strong></li>
+                            </ul>
+                            <div class="mbr-section-btn">
+                                <a class="btn btn-white display-4" href="./docs/Formulario.html">Empieza Hoy</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -185,32 +258,8 @@
             </div>
         </div>
     </section>
+
     
-  
-<!-- CLASES POR ZOOM -->
-  <!-- <section data-bs-version="5.1" class="tamanio header01 immersem5 cid-ux3LumQxSR" id="hero-1-ux3LumQxSR">
-
-      <div class="container-fluid">
-          <div class="row">
-              <div class="col-12">
-                  <div class="content-wrapper">
-                      <div class="image-wrapper">
-                          <img src="imagenes/ALUMNOS/alumnos.png" alt="alumnos"></div>
-                      <div class="content-wrap">
-                          <h1 class="mbr-section-title mbr-fonts-style display-1"><strong>Las clases que necesitas</strong></h1>
-                          <div class="text-wrap">
-                              <p class="mbr-text mbr-fonts-style display-4">Aprenda portugués de forma divertida e eficaz!</p>
-                          </div>
-                      </div>
-                      <div class="mbr-section-btn"><a class="btn btn-white display-4" href="#">Sabe más</a></div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section> -->
-  
-
-  
   <section data-bs-version="5.1" class="tamanio article01 immersem5 cid-ux3LumS54n" id="generic-text-1-ux3LumS54n">
     <div class="container-fluid">
         <div class="row">
